# cpp_snippet

./: .gitignore  CMakeLists.txt
event_loop/: CMakeLists.txt
event_loop/include/event_loop/: main.cpp  poller.h  scheduler.cpp  scheduler.h  task.h  tasks.h
event_loop/notes/: note.md
event_loop/src/: scheduler.cpp  tasks.cpp
tests/: CMakeLists.txt
tests/src/: co_test.cpp  main.cpp
